--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -718,6 +718,11 @@ section,
 /*--------------------------------------------------------------
 # Contact Section
 --------------------------------------------------------------*/
+.col-lg-7 {
+  margin-left: 20%;
+}
+
+
 .contact .info-wrap {
   background-color: var(--surface-color);
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
